fix: article card images too tall

--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -4,7 +4,7 @@
     margin: 20px;
     max-width: 300px;
     padding: 5px;
-    justify-content: space-evenly;
+    justify-content: flex-start;
 }
 
 .card-container:hover {
