--- a/src/pages/blog.css
+++ b/src/pages/blog.css
@@ -20,8 +20,8 @@
 
 #blog-posts {
     display: grid;
-    grid-template-rows: repeat(auto fill, 1fr);
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(auto-fill, 1fr);
     gap: 20px 20px;
 }
 
